--- a/src/styles.css
+++ b/src/styles.css
@@ -56,7 +56,7 @@ body {
   padding: 0;
 }
 
-.square {
+.cell {
   background: #fff;
   border: 1px solid #999;
   float: left;
@@ -69,22 +69,10 @@ body {
   padding: 0;
   text-align: center;
   width: 34px;
+  display: block;
 }
 
-.board-row:after {
+.row {
+  display: block;
   clear: both;
-  content: '';
-  display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-.game {
-  display: flex;
-  flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
 }
